# stdml-collective-experimental

./: .clang-format  .clang-tidy  .gitignore  BUG  CMakeLists.txt  Dockerfile  INSTALL  README  TODO  U  azure-pipelines.yml  b  check-include.rb  cli  configure  cs  elastic  headers.txt  headers.yaml  kungfu-launcher.sh  lint  mac  p  parse-compile-command.rb  parse-link-flags.rb  rel  srv  std.rb  std.txt  t  x  x.rb  y  z
.github/workflows/: ci.yaml
apps/: common.hpp  stdml_collective_bench_allreduce.cpp  stdml_collective_bench_send_recv.cpp
auto/: cmake
auto/detect/execution/: Dockerfile  test.cpp
benchmarks/: bench-mpi-all-reduce.c  bench_all_reduce.cpp  bench_group_all_reduce.cpp  common.hpp
cmake/: apps.cmake  benchmarks.cmake  build_info.cmake  common.cmake  examples.cmake  fetch_catch2.cmake  fetch_stdtracer.cmake  lib.cmake  pack.cmake  strict.cmake  tests.cmake  tidy.cmake
doc/: no-pool-bench.txt  p2.txt  rchan.txt  results.txt  thread-pool-bench.txt
doc/linux/: errno.txt
doc/osx/: errno.txt
examples/: example-1.cpp  example-elastic-state.cpp  example-elastic.cpp  example-mpi.c  example-rchan.cpp  example-task.cpp  example_collective.cpp  example_fork.cpp  example_send_recv.cpp
include/std/: filesystem  ranges
include/stdml/: collective  mpi  mpi.h
include/stdml/bits/: address.hpp  buffer.hpp  channel.hpp  collective.hpp  connection.hpp  dtype.hpp  execution.hpp  ioutil.hpp  log.hpp  mailbox.hpp  peer.hpp  rchan.hpp  session.hpp  stat.hpp  thread_pool.hpp  topology.hpp
include/stdml/bits/collective/: address.hpp  affinity.hpp  algorithm.hpp  buffer.hpp  build_info.hpp  channel.hpp  config.hpp  connection.hpp  dtype.hpp  elastic.hpp  elastic_state.hpp  execution.hpp  http.hpp  ioutil.hpp  json.hpp  log.hpp  mailbox.hpp  patient.hpp  peer.hpp  rchan.hpp  session.hpp  stat.hpp  task.hpp  thread_pool.hpp  topology.hpp  waitgroup.hpp  xterm.hpp
opt/elastic/: elastic.go  go.sum
opt/net/c++20/: rchan.cpp
opt/net/old/: tcp_client.cpp  tcp_server.cpp
scripts/: euler.rb  group-by-thread.rb
scripts/bench/: 1.sh  baseline.sh  group.sh  mpi.sh  small.sh
scripts/lint/: fmt.sh  gen-clang-format.rb  tidy.sh
scripts/profile/: 1.sh  query-timeline.rb
scripts/run/: example-1.sh  example-mpi.sh
scripts/test/: shutdown.sh
scripts/tsan/: analysis-valgrind-result.rb  run.sh
scripts/vis/: style.rb  timeline.sh
src/stdml/: address.cpp  affinity.cpp  collective.cpp  connection.cpp  dtype.cpp  env.cpp  kungfu.cpp  log.cpp  mpi.cpp  peer.cpp  rchan.cpp  session.cpp  stat.cpp  thread_pool.cpp  topology.cpp  waitgroup.cpp
src/stdml/collective/: address.cpp  affinity.cpp  all_gather.cpp  build_info.cpp  client.cpp  collective_handler.cpp  config.cpp  connection.cpp  dtype.cpp  elastic.cpp  elastic_state.cpp  env.cpp  execution.cpp  fork.cpp  http.cpp  init_config.cpp  kungfu.cpp  log.cpp  mpi.cpp  peer.cpp  rchan.cpp  run_graph_pair_list.cpp  run_graph_pair_list_async.cpp  run_graph_pair_list_multi_thread.cpp  send_recv.cpp  session.cpp  socket_opt.c  socket_opt.cpp  stat.cpp  task.cpp  thread_pool.cpp  topology.cpp  waitgroup.cpp
testdata/: bert.txt  resnet50.txt
tests/catch2/: test_1.cpp
tests/data/: test-set-1.txt  vgg16.txt
tests/integration/: test_all_gather.cpp  test_all_reduce.cpp  test_broadcast.cpp  test_leak.cpp  test_shutdown.cpp  testing.hpp
tests/unit/: test_http.cpp  test_io.cpp  test_ioutil.cpp  test_json.cpp
vms/dev/: Vagrantfile  provision.sh
(+19 files in other folders)
