CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(stdml-collective)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
SET(LIBRARY_OUTPUT_PATH lib)

FIND_PACKAGE(Threads REQUIRED)
INCLUDE(cmake/common.cmake)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

IF(ENABLE_TRACE)
    INCLUDE(cmake/fetch_stdtracer.cmake)
    ADD_COMPILE_OPTIONS(-DSTDML_ENABLE_TRACE=1)
ENDIF()

IF(DISABLE_CXX11_ABI)
    ADD_DEFINITIONS(-D_GLIBCXX_USE_CXX11_ABI=0)
ENDIF()

INSTALL(DIRECTORY include DESTINATION .)

IF(HAVE_MPI)
    FIND_PACKAGE(MPI REQUIRED)
ENDIF()

OPTION(BUILD_TESTS "Build tests." OFF)

INCLUDE(cmake/lib.cmake)
INCLUDE(cmake/examples.cmake)
IF(BUILD_TESTS)
    INCLUDE(cmake/tests.cmake)
ENDIF()
INCLUDE(cmake/benchmarks.cmake)
INCLUDE(cmake/pack.cmake)
